--- a/apps/web/src/styles/debug-modal.css
+++ b/apps/web/src/styles/debug-modal.css
@@ -33,7 +33,6 @@
 }
 
 .app-debug-modal__header h2 {
-  margin: 0;
   font-size: 1rem;
 }
 
