--- a/apps/web/src/styles/inspector-selected-line.css
+++ b/apps/web/src/styles/inspector-selected-line.css
@@ -10,7 +10,6 @@
 }
 
 .selected-line-inspector__summary h3 {
-  margin: 0;
   font-size: 0.82rem;
   color: #9eb4d7;
 }
@@ -84,7 +83,6 @@
 }
 
 .selected-line-inspector__demand h3 {
-  margin: 0;
   font-size: 0.82rem;
   color: #9eb4d7;
 }
@@ -95,7 +93,6 @@
 }
 
 .selected-line-inspector__actions h3 {
-  margin: 0;
   font-size: 0.82rem;
   color: #9eb4d7;
 }
@@ -158,7 +155,6 @@
 }
 
 .selected-line-inspector__route-sequence h3 {
-  margin: 0;
   font-size: 0.82rem;
   color: #9eb4d7;
 }
